src/test/ui/issues/issue-70724-add_type_neq_err_label-unwrap.stderr
error[E0369]: binary operation `==` cannot be applied to type `fn() -> i32 {a}`
  --> $DIR/issue-70724-add_type_neq_err_label-unwrap.rs:6:5
   |
LL |     assert_eq!(a, 0);
   |     ^^^^^^^^^^^^^^^^
   |     |
   |     fn() -> i32 {a}
   |     {integer}
   |     help: you might have forgotten to call this function: `*left_val()`
   |
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/issue-70724-add_type_neq_err_label-unwrap.rs:6:5
   |
LL |     assert_eq!(a, 0);
   |     ^^^^^^^^^^^^^^^^ expected fn item, found integer
   |
   = note: expected fn item `fn() -> i32 {a}`
                 found type `i32`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `fn() -> i32 {a}` doesn't implement `Debug`
  --> $DIR/issue-70724-add_type_neq_err_label-unwrap.rs:6:5
   |
LL | fn a() -> i32 {
   |    - consider calling this function
...
LL |     assert_eq!(a, 0);
   |     ^^^^^^^^^^^^^^^^ `fn() -> i32 {a}` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `fn() -> i32 {a}`
   = help: use parentheses to call the function: `a()`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308, E0369.
For more information about an error, try `rustc --explain E0277`.
