src/test/ui/issues/issue-70724-add_type_neq_err_label-unwrap.rs
fn a() -> i32 {
    3
}

pub fn main() {
    assert_eq!(a, 0);
    //~^ ERROR can't compare
    //~| ERROR mismatched types
    //~| ERROR doesn't implement
}
